# Heleani-Rover

./: .gitignore  CMakeLists.txt  readme.md
client/: CMakeLists.txt  main.cpp  misc_routing.cpp  misc_routing.h  readme.md
client/webview/: camera.html  commands.html  index.html
client/webview/js/: index.js
client/webview/stylesheets/: commands.css  login.css  rover.css
rover/: CMakeLists.txt  main.cpp
shared_xmpp/: .gitignore  CMakeLists.txt  libstrophe_cpp.cpp  libstrophe_cpp.h  main.cpp  readme.md  xmpp_iq.h  xmpp_node.cpp  xmpp_node.h
